css naming changing and alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ nav ul li a {
   border-width: 0.1px;
 }
 
-.flexSeparator {
+.flex-separator {
   display: flex;
   justify-content: space-between;
   align-self: center;
@@ -319,7 +319,7 @@ nav ul li a {
   /* background-color: white; */
 }
 
-.right__top-details {
+.right-sticky__top-details {
   display: flex;
   gap: 30%;
 }
@@ -394,17 +394,22 @@ nav ul li a {
   border-top: none;
 }
 
-.sticky {
+.right__sticky {
   position: sticky;
   top: 40px;
 }
 
-.stickyForm {
+.sticky__form {
   padding: 30px;
   border: 2px solid black;
   border-radius: 10px;
   border-color: var(--main-color);
   margin-top: 40px;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.grey {
+  color: grey;
 }
 
 .reviews {
@@ -413,9 +418,13 @@ nav ul li a {
 .right__sticky-note {
   display: flex;
   padding: 20px;
-  border: 2px solid var(--main-color);
+  border: 1px solid var(--main-color);
   margin-top: 20px;
   border-radius: 10px;
+}
+
+.flex-center {
+  justify-content: center;
 }
 .indicator {
   width: 120px;
@@ -428,6 +437,9 @@ nav ul li a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 30px;
+}
+.user-comments__column {
+  height: 200px;
 }
 
 .location {
@@ -463,7 +475,7 @@ nav ul li a {
   grid-gap: 100px;
 }
 
-.flexColumnGaps {
+.flex-column-gaps {
   display: flex;
   flex-direction: column;
   gap: 20px;
